# M1kanN-Vulkan-Renderer-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.bat  glfwWindow.cpp  keyboard_movement_controller.cpp  m1k_application.cpp  m1k_camera.cpp  m1k_device.cpp  m1k_model.cpp  m1k_pipeline.cpp  m1k_swap_chain.cpp  m1k_window.cpp  main.cpp  simple_render_system.cpp
include/: keyboard_movement_controller.hpp  m1k_application.hpp  m1k_buffer.hpp  m1k_camera.hpp  m1k_descriptor.hpp  m1k_device.hpp  m1k_frame_info.hpp  m1k_game_object.hpp  m1k_model.hpp  m1k_pipeline.hpp  m1k_renderer.hpp  m1k_swap_chain.hpp  m1k_window.hpp  simple_render_system.hpp
shaders/: CMakeLists.txt
shaders/sources/: bindless_pbr_shader.frag  bindless_pbr_shader.vert  checkerboard_shader.frag  checkerboard_shader.vert  pbr_shader.frag  pbr_shader.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: m1k_application.cpp  m1k_application.hpp  m1k_buffer.cpp  m1k_camera.cpp  m1k_config.hpp  m1k_data_struct.hpp  m1k_descriptor.cpp  m1k_device.cpp  m1k_frame_info.hpp  m1k_game_object.cpp  m1k_model.cpp  m1k_model.hpp  m1k_pipeline.cpp  m1k_renderer.cpp  m1k_swap_chain.cpp  m1k_texture.cpp  m1k_utils.hpp  m1k_window.cpp  main.cpp  simple_render_system.cpp
src/core/: m1k_buffer.cpp  m1k_descriptor.cpp  m1k_descriptor.hpp  m1k_device.cpp  m1k_device.hpp  m1k_pipeline.cpp  m1k_pipeline.hpp  m1k_renderer.cpp  m1k_renderer.hpp  m1k_swap_chain.cpp  m1k_swap_chain.hpp
src/include/: m1k_application.hpp  m1k_camera.hpp  m1k_device.hpp  m1k_frame_info.hpp  m1k_game_object.hpp  m1k_model.hpp  m1k_pipeline.hpp  m1k_renderer.hpp  m1k_texture.hpp
src/include/core/: m1k_descriptor.hpp  m1k_device.hpp  m1k_pipeline.hpp  m1k_renderer.hpp  m1k_swap_chain.hpp
src/include/systems/: point_light_system.hpp  simple_render_system.hpp
src/include/ui/: m1k_window.hpp
src/objects/: m1k_game_object.cpp  m1k_game_object.hpp  m1k_mesh.cpp  m1k_mesh.hpp  m1k_model.cpp  m1k_model.hpp  m1k_texture.cpp  m1k_texture.hpp
src/shaders/: CMakeLists.txt
src/shaders/sources/: simple_shader.frag  simple_shader.vert
src/systems/: bindless_pbr_render_system.cpp  bindless_pbr_render_system.hpp  pbr_render_system.cpp  pbr_render_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/tests/: test_assimp_load.cpp  test_tinygltf_load.cpp
src/ui/: keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  m1k_camera.cpp  m1k_window.cpp  m1k_window.hpp
src/utils/: m1k_utils.cpp  m1k_utils.hpp
